Fixed css flicker issue, not sure what was causing it but I hid it with a short delay

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -84,32 +84,28 @@ td-card img {
   font-weight: normal;
   font-style: normal;
   display: inline-block;
-  -moz-transition: all 1s ease;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
 }
 .rating span.star:hover {
   cursor: pointer;
 }
 
 .rating span.star:before {
+  -webkit-transition: all .3s ease .3s;
   content: "\f005";
   padding-right: 5px;
   color: #f1f1f4;
-  -moz-transition: all 1s ease;
-  -webkit-transition: all 1s ease;
+  /*-moz-transition: all 1s ease;
   -o-transition: all 1s ease;
-  transition: all 1s ease;
+  transition: all 1s ease;*/
 }
 .rating span.star:active:before,
 .rating span.star:active ~ span.star:before {
-  /*content: "\f005";*/
-  color: #e3cf7a;
-  -moz-transition: all 0s ease;
   -webkit-transition: all 0s ease;
+  color: #e3cf7a;
+  /*content: "\f005";
+  -moz-transition: all 0s ease;
   -o-transition: all 0s ease;
-  transition: all 0s ease;
+  transition: all 0s ease;*/
 }
 
 .thumbnail {
